# Jupii

./: .clang-format-ignore  .gitignore  CMakeLists.txt  README.md  config.h.in  jupii-next.spec  jupii.spec
.github/workflow/: Jupii-Stable-Build.yml
.github/workflows/: Jupii-COPR-Build-System.yaml  Jupii-Next-Build.yml  Jupii-Stable-Build.yml
binaries/: harbour-jupii-2.11.2-1-debug.armv7hl.rpm  harbour-jupii-2.8.2-1.armv7hl.rpm  harbour-jupii-2.8.2-2.armv7hl.rpm  harbour-jupii-2.8.2-3.armv7hl.rpm  harbour-jupii-2.8.2-4.armv7hl.rpm  harbour-jupii-2.9.0-1.armv7hl.rpm  jupii-2.8.2-aarch64.flatpak  jupii-2.8.2-x86_64.flatpak  jupii-2.9.1-aarch64.flatpak  jupii-2.9.1-x86_64.flatpak  jupii_aarch64.flatpak  jupii_x86_64.flatpak
binary/: harbour-jupii-0.9.0-1.armv7hl-debug.rpm  harbour-jupii-0.9.1-1.armv7hl-debug.rpm  harbour-jupii-2.6.0-1.armv7hl-alpha-debug.rpm  harbour-jupii-2.7.0-1.armv7hl.rpm  harbour-jupii-2.7.1-2.armv7hl.rpm  harbour-jupii-2.7.1-3.armv7hl.rpm  harbour-jupii-2.7.1-4.armv7hl.rpm  harbour-jupii-2.7.3-1.armv7hl.rpm  harbour-org.gpodder.sailfish-4.6.0-1.noarch-jupii.rpm
cmake/: ffmpeg.cmake  fmt.cmake  gumbo.cmake  install_desktop.cmake  install_sfos.cmake  pybind11.cmake  python_module.cmake  tests.cmake  translations.cmake  upnpp.cmake  xz.cmake
core/: albummodel.cpp  albummodel.h  artistmodel.cpp  artistmodel.h  audiocaster.cpp  audiocaster.h  avtransport.cpp  avtransport.h  bcapi.cpp  bcapi.h  bcmodel.cpp  bcmodel.h  cdirmodel.cpp  cdirmodel.h  connectivitydetector.cpp  connectivitydetector.h  contentdirectory.cpp  contentserver.cpp  contentserver.h  contentserverworker.cpp  contentserverworker.h  dbus_jupii_adaptor.cpp  dbus_jupii_adaptor.h  dbus_notifications_inf.cpp  dbus_notifications_inf.h  dbus_systemd_inf.cpp  dbus_systemd_inf.h  dbus_tracker_inf.cpp  dbus_tracker_inf.h  dbusapp.cpp  dbusapp.h  device.cpp  device.h  deviceinfo.cpp  deviceinfo.h  devicemodel.cpp  devicemodel.h  directory.cpp  directory.h  dirmodel.cpp  (+77 more)
core_src/: avtransport.cpp  avtransport.h  contentserver.h  dbus_jupii_adaptor.cpp  dbus_jupii_adaptor.h  dbus_tracker_inf.cpp  dbus_tracker_inf.h  devicemodel.cpp  devicemodel.h  directory.cpp  filemetadata.h  jupii_core.pri  main.cpp  renderingcontrol.cpp  service.cpp  service.h  services.cpp  services.h  settings.cpp  tracker.cpp  utils.cpp  utils.h  yamahaextendedcontrol.cpp
dbus/: jupii.xml  org.freedesktop.systemd1.Manager.xml  org.jupii.xml  tracker.xml
desktop/: Dockerfile.opensuse  Dockerfile.ubuntu  build.sh  build_ffmpeg.sh  build_in_doker.sh  jupii.desktop  jupii.desktop.in  jupii.metainfo.xml  jupii.metainfo.xml.in  jupii.pro  jupii.qrc  org.mkiol.Jupii.json  pupnp.patch  resources.qrc
desktop/qml/: AboutPage.qml  AddMediaPage.qml  AddUrlDialog.qml  AttachedIcon.qml  BasicListItemWithArrow.qml  BcPage.qml  BusyIndicatorWithLabel.qml  CamDialog.qml  ChangelogPage.qml  CircularProgressBar.qml  CreateSlidesDialog.qml  DeviceInfoPage.qml  DevicesPage.qml  DoubleListItem.qml  FlatButtonWithToolTip.qml  FosdemPage.qml  FosdemYearsPage.qml  IcecastPage.qml  MediaInfoPage.qml  MicDialog.qml  PlayButton.qml  PlayQueuePage.qml  PlaybackDialog.qml  PlayerPanel.qml  PopupDialog.qml  RadionetPage.qml  RecPage.qml  RichLabel.qml  ScreenDialog.qml  SearchDialogHeader.qml  SectionLabel.qml  SeekSlider.qml  SettingsPage.qml  ShowmoreItem.qml  SlidesPage.qml  SomafmPage.qml  SoundcloudPage.qml  TuneinPage.qml  UpnpCDirDevicesPage.qml  UpnpCDirPage.qml  (+3 more)
flatpak/: jupii.metainfo.xml  net.mkiol.Jupii.yaml  org.mkiol.Jupii.yaml  python3-modules.yaml  python3-yt-dlp.yaml  python3-ytmusicapi.yaml
libupnp/: libupnp.pri
libupnpp/: libupnpp.pri
misc/: JupiiDbusTest.qml
patches/: ffmpeg_v4l2.patch
plasma/: resources.qrc
qhttpserver/: qhttpserver.pri
sailfish/: harbour-jupii-harbour.desktop  harbour-jupii.desktop  jupii.pro  sailfishapp.pri  sailfishapp_i18n.pri
sailfish/libupnpp/: README.asc  autogen.sh  configure.ac  libupnpp.pc.in  libupnpp.pri
sailfish/libupnpp/debian/: changelog  control  libupnpp3-dev.install-nomulti  rules  watch
sailfish/libupnpp/doc/: makefile
sailfish/libupnpp/libupnpp/: base64.cxx  conf_post.h  config.h.in  getsyshwaddr.cpp  getsyshwaddr.h  ixmlwrap.cxx  smallut.cpp  soaphelp.cxx  upnpavutils.hxx  upnpp_p.hxx  upnpplib.cxx
sailfish/libupnpp/libupnpp/control/: avlastchg.cxx  avtransport.cxx  avtransport.hxx  cdircontent.cxx  cdircontent.hxx  cdirectory.cxx  description.cxx  device.cxx  device.hxx  discovery.cxx  discovery.hxx  httpdownload.cxx  mediarenderer.cxx  ohinfo.hxx  ohplaylist.hxx  ohproduct.hxx  ohradio.cxx  ohreceiver.hxx  ohsender.cxx  ohvolume.hxx  renderingcontrol.cxx  renderingcontrol.hxx  service.cxx  service.hxx
sailfish/libupnpp/libupnpp/device/: device.hxx  vdir.cxx  vdir.hxx
sailfish/libupnpp/windows/: config_windows.h
sailfish/libupnpp/windows/qmk/: libupnpp.pro
sfos/: harbour-jupii-harbour.desktop  harbour-jupii-open-url.desktop  harbour-jupii.desktop  harbour-jupii.spec  jupii-harbour.desktop.in  jupii-open-url.desktop.in  jupii.desktop.in
src/: albummodel.cpp  artistmodel.cpp  audiocaster.cpp  audiocaster.h  avlogger.cpp  avtransport.cpp  avtransport.h  bcapi.cpp  bcapi.h  bcmodel.cpp  bcmodel.h  caster.cpp  caster.hpp  cdirmodel.cpp  cdirmodel.h  comp_tools.cpp  connectionmanagerservice.cpp  connectionmanagerservice.h  connectivitydetector.cpp  connectivitydetector.h  contentdirectory.cpp  contentdirectory.h  contentdirectoryservice.cpp  contentdirectoryservice.h  contentserver.cpp  contentserver.h  contentserverworker.cpp  contentserverworker.h  databuffer.cpp  databuffer.hpp  dbus_jupii_adaptor.cpp  dbus_jupii_adaptor.h  dbus_notifications_inf.cpp  dbus_notifications_inf.h  dbus_tracker_inf.cpp  dbus_tracker_inf.h  dbusapp.cpp  dbusapp.h  device.cpp  device.h  (+118 more)
taglib/: taglib.pri
tests/: playlistparser_test.cpp
tools/: make_pymodules.sh  make_translations_qrc.sh
translations/: jupii-de.ts  jupii-en.ts  jupii-es.ts  jupii-et.ts  jupii-it.ts  jupii-nl.ts  jupii-nl_BE.ts  jupii-pl.ts  jupii-ru.ts  jupii-sl_SI.ts  jupii-sv.ts  jupii-zh_CN.ts
(+387 files in other folders)
